@@ -505,107 +505,9 @@ bool BookmarksBusinessLogic::MergeBookmarks(long long mainBID, long long subBID,
     mergedTagsList.append(subBdata.Ex_TagsList);
 
     //BookmarkFiles: Append Sub's files to Main's.
-    //(A) Although it's TEMPTING to just change the BID of Sub's BookmarkFiles such that Main owns
-    //  them, we won't do this because:
-    //  1. This function is general and should support moving files between different file archives.
-    //     Two bookmarks from different folder with different file archives can be merged. We want
-    //     to move the files as well.
-    //  2. Even without considering different file archives, we'd like files of the same bookmark to
-    //     be in the same folder. We don't want to postpone this until user manually uses the
-    //     'Check and Fix File Archives' feature.
-    //  3. We have a standard mechanism to be used instead: `FileManager::ChangeFileLocation`.
-    //(B) We can also create a new BookmarkFile that practically copies the old file to the new
-    //  bookmark and then delete the previous bookmark. We won't do this as well because:
-    //  1. It sends the old files unnecessarily to Trash.
-    //  2. Files may be stored under a different name than their own real name, especially in older
-    //     FAM file layouts.
-    //(C) Other main solution, will then be to use the designated `FileManager::ChangeFileLocation`
-    //  to relocate the file and also make Sub's file to be owned by the Main file. Downsides are:
-    //  1. Not really a downside; but it requires separate steps other than just AddOrEditBookmark
-    //     call and increases the transaction length.
-    //  2. It requires manual file management outside of FileManager's standard procedures, i.e we
-    //     need to publicize and use the otherwise private FileManager::AddBookmarkFile; however,
-    //     FileManager class is intended to be used using only its FileManager::UpdateBookmarkFiles
-    //     to update files.
-    //  3. We can't keep a unified mergedFilesList because we are directly changing files info in
-    //     the database. So we have to manually set the default file index after merging is done.
-    //     (This is because AddOrEditBookmark receives index, not BFID, of the default file.)
-    //  4. In case of shared files, if Sub's file was shared with a bookmark from a different file
-    //     archive, then we are simply moving the file to a new folder without caring about changing
-    //     file archives. (If Sub's file is not shared, moving it to the new location is just fine.)
-    //     But this is an inherent problem with sharing files and has to be solved generally if
-    //     shared files are going to be supported.
-    //(D) Finally, we use the correct solution which is:
-    //  We extend FileManager::UpdateBookmarkFiles functionality to detect when we are attaching a
-    //  shared file, and we can control whether to copy file to the new location.
-    //  To merge the files, we set Sub's Bf.BFID = -1 but leave FID != -1, and choose to copy the
-    //  file to Main's location using SharedFileLocationPolicy. We add Bf to mainBdata's file list.
-    //  FileManager::UpdateBookmarkFiles beautifully understands this is a file sharing request and
-    //  adds the file info to Main. When Sub is removed, FileManager::TrashAllBookmarkFiles is smart
-    //  enough to detect that files are shared and will not delete them.
-    //  Problem "(C).4" stated immediately above still applies, but as mentioned, this is a general
-    //  shared-files implementation problem that has to be solved if they are going to be supported.
-    //Note that there is a usecase with shared files that we have not managed here: if a file is
-    //  shared between Main and Sub, we have to detect it. We don't currently detect this.
+    //Documentation moved to [Merging Bookmark Files]. Code samples were removed, but are available
+    //in revision a7cf3e9a at 2017-06-01. The following implements solution (D).
     QList<FileManager::BookmarkFile> mergedFilesList = mainBdata.Ex_FilesList;
-
-    //SOLUTION (B) EXPLAINED ABOVE:
-    /*
-    foreach (const FileManager::BookmarkFile& subBf, subBdata.Ex_FilesList)
-    {
-        QString fullFilePathName;
-        dbm->files.GetFullArchiveFilePath(subBf.ArchiveURL, "getting file path", fullFilePathName);
-
-        QFileInfo fileInfo(fullFilePathName);
-        if (!fileInfo.isFile())
-        {
-            QMessageBox::warning(dialogParent, "Problem in Attached Files", "The file \"" + fullFilePathName + "\" "
-                                 "does not exist! It will be skipped and not attached.");
-            continue;
-        }
-
-        //Same logic exists in BookmarkEditDialog::accept and its [File Attaching] functions.
-        FileManager::BookmarkFile bf;
-        bf.BFID         = -1; //Leave to FileManager.
-        bf.BID          = mainBID;
-        bf.FID          = -1; //Leave to FileManager.
-        bf.OriginalName = fullFilePathName;
-        bf.ArchiveURL   = ""; //Leave to FileManager.
-        bf.ModifyDate   = fileInfo.lastModified();
-        bf.Size         = fileInfo.size();
-        bf.MD5          = Util::GetMD5HashForFile(fullFilePathName);
-        bf.Ex_IsDefaultFileForEditedBookmark = false; //Not important.
-        bf.Ex_RemoveAfterAttach = false;
-
-        mergedFilesList.append(bf);
-    }
-    */
-
-    //SOLUTION (C) EXPLAINED ABOVE:
-    //This being here is fine and files list will update correctly, however the correct place for it
-    //is AFTER editing Main and BEFORE removing Sub. The code for setting the default file must be
-    //there though. It is omitted from here.
-    /*
-    foreach (const FileManager::BookmarkFile& subBf, subBdata.Ex_FilesList)
-    {
-        QString fileArchiveName, folderHint;
-        success = dbm->bfs.GetFileArchiveAndFolderHint(mainBdata.FOID, fileArchiveName, folderHint);
-        if (!success)
-            return false;
-
-        success = dbm->files.ChangeFileLocation(subBf.FID, fileArchiveName, folderHint, mainBdata.Name,
-                                                "merging bookmark files");
-        if (!success)
-            return false;
-
-        long long addedBFID;
-        success = dbm->files.AddBookmarkFile(mainBID, subBf.FID, addedBFID, "merging bookmark files");
-        if (!success)
-            return false;
-    }
-    */
-
-    //SOLUTION (D) EXPLAINED ABOVE:
     foreach (const FileManager::BookmarkFile& subBf, subBdata.Ex_FilesList)
     {
         FileManager::BookmarkFile sharedBf = subBf;
